post-review adjustments

--- a/spec/fixtures/cassettes/Api_ControllerForBookingsyncUniverseApi/BookingSync_Universe_API_Access_is_enabled/token_is_provided_in_the_request/response_from_BookingSync_is_not_success/returns_original_response_from_BookingSync.yml
+++ b/spec/fixtures/cassettes/Api_ControllerForBookingsyncUniverseApi/BookingSync_Universe_API_Access_is_enabled/token_is_provided_in_the_request/response_from_BookingSync_is_not_success/returns_original_response_from_BookingSync.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://bookingsync.com/api/v3/oauth
+    uri: https://www.bookingsync.com/api/v3/oauth
     body:
       encoding: US-ASCII
       string: ''
