--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ gemfile:
   - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_5.0.gemfile
 env:
-  - BOOKINGSYNC_URL=https://bookingsync.com
+  - BOOKINGSYNC_URL=https://www.bookingsync.com
 script: "bundle exec rake spec"
