--- a/spec/fixtures/cassettes/Api_ControllerForBookingsyncUniverseApi/BookingSync_Universe_API_Access_is_enabled/token_is_provided_in_the_request/response_from_BookingSync_is_success/endpoint_is_guarded_by_authorization/no_scope_is_permitted/returns_403_status.yml
+++ b/spec/fixtures/cassettes/Api_ControllerForBookingsyncUniverseApi/BookingSync_Universe_API_Access_is_enabled/token_is_provided_in_the_request/response_from_BookingSync_is_success/endpoint_is_guarded_by_authorization/no_scope_is_permitted/returns_403_status.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://www.bookingsync.com/api/v3/oauth
+    uri: https://www.bookingsync.com/api/v3/auth
     body:
       encoding: US-ASCII
       string: ''
@@ -27,21 +27,21 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       X-Updated-Since-Request-Synced-At:
-      - 2017-05-19 15:40:00 UTC
+      - 2017-05-23 12:12:23 UTC
       X-Ratelimit-Limit:
       - '1000'
       X-Ratelimit-Reset:
-      - '1495209600'
+      - '1495544400'
       X-Ratelimit-Remaining:
       - '999'
       Link:
-      - <https://www.bookingsync.com/api/v3/oauth?page=1>; rel="first"
+      - <https://www.bookingsync.com/api/v3/auth?page=1>; rel="first"
       X-Per-Page:
       - '100'
       Content-Type:
       - application/vnd.api+json; charset=utf-8
       Etag:
-      - W/"73fbd6405e504baa87192e76fe8bbc41"
+      - W/"7ae87eb27b98a903a7cd84e261596313"
       Cache-Control:
       - max-age=0, private, must-revalidate
       P3p:
@@ -49,19 +49,19 @@ http_interactions:
         OUR SAMi OTRo UNRo PUBi IND UNI STA"
       Set-Cookie:
       - ahoy_track=true; path=/
-      - ahoy_visit=7d1d5b02-24a9-42bd-a503-f46dcb2c1a57; path=/; expires=Fri, 26 May
-        2017 15:40:00 -0000
-      - ahoy_visitor=76c0151a-1e19-4592-ae17-df30d73e8e2c; path=/; expires=Sun, 19
-        May 2019 15:40:00 -0000
+      - ahoy_visit=d2ccc2e1-dae1-4968-8315-59498fdb5aac; path=/; expires=Tue, 30 May
+        2017 12:12:23 -0000
+      - ahoy_visitor=cfc07b9c-efa7-4855-90c2-fafcb49a9216; path=/; expires=Thu, 23
+        May 2019 12:12:23 -0000
       X-Request-Id:
-      - 198bbbf7-1bf7-472b-92c6-0fc6ec041f54
+      - d72caa2a-1e08-4c8a-8986-bc06f20860ff
       X-Runtime:
-      - '0.341843'
+      - '0.228512'
       Connection:
       - close
     body:
       encoding: UTF-8
-      string: '{"oauth":{"account_id":1,"scopes":["public","bookings_read","rentals_read","rates_read"]},"meta":{"Link":{"first":"https://www.bookingsync.com/api/v3/oauth?page=1"},"X-Total-Pages":null,"X-Total-Count":null,"X-Per-Page":"100"}}'
+      string: '{"auth":{"account_id":1,"scopes":["public","rentals_read","bookings_write_owned","payments_write_owned"]},"meta":{"Link":{"first":"https://www.bookingsync.com/api/v3/auth?page=1"},"X-Total-Pages":null,"X-Total-Count":null,"X-Per-Page":"100"}}'
     http_version:
-  recorded_at: Fri, 19 May 2017 15:40:01 GMT
+  recorded_at: Tue, 23 May 2017 12:12:23 GMT
 recorded_with: VCR 3.0.3
