--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ rvm:
 gemfile:
   - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_5.0.gemfile
+env:
+  - BOOKINGSYNC_URL=https://www.bookingsync.com
 script: "bundle exec rake spec"
