--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -31,5 +31,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - name: Install dependencies for all Rails versions
+        run:  bundle exec appraisal install
       - name: Run tests
         run: bundle exec appraisal rspec
