Update ruby versions for github workflows

--- a/spec/fixtures/cassettes/Api_ControllerForBookingsyncUniverseApi/BookingSync_Universe_API_Access_is_enabled/token_is_provided_in_the_request/response_from_BookingSync_is_success/endpoint_is_guarded_by_authorization/no_scope_is_permitted/returns_403_status.yml
+++ b/spec/fixtures/cassettes/Api_ControllerForBookingsyncUniverseApi/BookingSync_Universe_API_Access_is_enabled/token_is_provided_in_the_request/response_from_BookingSync_is_success/endpoint_is_guarded_by_authorization/no_scope_is_permitted/returns_403_status.yml
@@ -61,7 +61,7 @@ http_interactions:
       - close
     body:
       encoding: UTF-8
-      string: '{"auth":{"account_id":1,"scopes":["public","rentals_read","bookings_write_owned","payments_write_owned"]},"meta":{"Link":{"first":"https://www.bookingsync.com/api/v3/auth?page=1"},"X-Total-Pages":null,"X-Total-Count":null,"X-Per-Page":"100"}}'
+      string: '{"auth":{"account_id":1,"accounts_user_id":2,"scopes":["public","rentals_read","bookings_write_owned","payments_write_owned"],"user_id":3},"meta":{"Link":{"first":"https://www.bookingsync.com/api/v3/auth?page=1"},"X-Total-Pages":null,"X-Total-Count":null,"X-Per-Page":"100"}}'
     http_version:
   recorded_at: Tue, 23 May 2017 12:12:23 GMT
 recorded_with: VCR 3.0.3
